--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
 	"version": "0.1.0",
 	"scripts": {
 		"build": "rimraf dist pkg && webpack",
-		"start": "rimraf dist pkg && webpack-dev-server --open -d",
-		"test": "cargo test && wasm-pack test --headless"
+		"start": "rimraf dist pkg && webpack-dev-server --open -d"
 	},
 	"devDependencies": {
 		"@wasm-tool/wasm-pack-plugin": "^1.1.0",
 		"copy-webpack-plugin": "^5.0.3",
+		"rimraf": "^3.0.0",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.3",
-		"webpack-dev-server": "^3.7.1",
-		"rimraf": "^3.0.0"
+		"webpack-dev-server": "^3.7.1"
+	},
+	"dependencies": {
+		"@babel/core": "^7.24.7",
+		"@babel/plugin-transform-class-properties": "^7.24.7",
+		"@babel/preset-env": "^7.24.7",
+		"@babel/preset-react": "^7.24.7",
+		"babel-loader": "^8.3.0",
+		"file-loader": "^6.2.0",
+		"gh-pages": "^6.1.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	}
 }
