--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 		"@babel/preset-env": "^7.24.7",
 		"@babel/preset-react": "^7.24.7",
 		"babel-loader": "^8.3.0",
+		"css-loader": "^5.2.7",
 		"file-loader": "^6.2.0",
 		"gh-pages": "^6.1.1",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"style-loader": "^2.0.0"
 	}
 }
