--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@babel/preset-react": "^7.24.7",
 		"babel-loader": "^8.3.0",
 		"css-loader": "^5.2.7",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.2",
 		"file-loader": "^6.2.0",
 		"gh-pages": "^6.1.1",
 		"react": "^18.3.1",
